Bug 352297 - Reopening Application Dashboard during application launch leaves it broken
Summary: Reopening Application Dashboard during application launch leaves it broken
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Application Dashboard (other bugs)
Version First Reported In: 5.4.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-05 02:28 UTC by trmdi
Modified: 2015-10-14 20:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description trmdi 2015-09-05 02:28:36 UTC
See the reproducing steps.

Reproducible: Always

Steps to Reproduce:
1. open 1 app from app dashboard.
2. open dash board BEFORE the above app appears
3. now, open any app on the dashboard, nothing will start.

Actual Results:  
dashboard can not launch the app clicked.

Expected Results:  
dashboard can launch the app clicked.
Comment 1 trmdi 2015-09-05 02:34:37 UTC
Demonstration video: http://webm.host/e5c38/
Comment 2 Eike Hein 2015-10-14 20:37:58 UTC
Git commit 52d04f89e7070aad6a8c1daf92de67a2f513f01f by Eike Hein.
Committed on 14/10/2015 at 20:36.
Pushed by hein into branch 'Plasma/5.4'.

Re-activate window on focus loss.

Prevents just-launched applications from interfering with the
Dashboard when the user immediately wants to use it again.

M  +18   -16   applets/kicker/plugin/fullscreenwindow.cpp
M  +1    -2    applets/kicker/plugin/fullscreenwindow.h

http://commits.kde.org/plasma-desktop/52d04f89e7070aad6a8c1daf92de67a2f513f01f