Re-activate window on focus loss.

Prevents just-launched applications from interfering with the
Dashboard when the user immediately wants to use it again.

BUG:352297